@@ -608,3 +608,7 @@ version 4.28.1 (2016-11-28)
       inappropriate symmetric key length (issue #195).
     * Fixes JWKSet.load(java.io.File) to read file in UTF-8 format (issue
       #198).
+    * Throws descriptive IOException on exceeding the byte limit of reading a
+      BoundedInputStream, e.g. in
+      DefaultResourceRetriever.retrieveResource(java.net.URL).
+
